--- a/SpringCloudMicroService/user-service/build.gradle
+++ b/SpringCloudMicroService/user-service/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     // Spring Security
     implementation 'org.springframework.boot:spring-boot-starter-security:2.5.4'
 
+    // JWT
+    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
 
 
 }
