--- a/SpringCloudMicroService/user-service/src/main/resources/application.yml
+++ b/SpringCloudMicroService/user-service/src/main/resources/application.yml
@@ -24,6 +24,15 @@ eureka:
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka
 
-# \uC784\uC758\uB85C \uB9CC\uB4E0\uAC12
+
 greeting:
   message: Welcome to the Simple E-commerce.
+
+logging:
+  level:
+    com.example.userservice: debug
+
+
+token:
+  expiration_time: 86400000 # 하루 ms 단위
+  secret: user-token
