--- a/SpringCloudMicroService/config-service/build.gradle
+++ b/SpringCloudMicroService/config-service/build.gradle
@@ -17,30 +17,10 @@ ext {
 }
 
 dependencies {
-    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.cloud:spring-cloud-config-server'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-
-    // JAXB API
-    // Java Architecture for XMl Binding
-    // 자바 클래스를 XML 로 표현하는 자바 API
-    // Java 9 부턴 빠짐
-    // javax/xml/bind/DatatypeConverter 에러뜸
-    // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
-    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
-
-    // JWT
-    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
-    implementation 'io.jsonwebtoken:jjwt:0.9.1'
-
-    // spring cloud config
-    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-config
-    implementation 'org.springframework.cloud:spring-cloud-starter-config'
-
+    // spring cloud bootstrap
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bootstrap
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 
@@ -49,9 +29,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     // spring boot amqp
-    // 2.5.3 이상 버전에선 bus-amqp 를 쓰면 오류 발생함
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp
     implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp:3.0.3'
+
+
 
 
 }
