--- a/SpringCloudMicroService/user-service/build.gradle
+++ b/SpringCloudMicroService/user-service/build.gradle
@@ -45,6 +45,23 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 
+    // spring cloud config
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-config
+    implementation 'org.springframework.cloud:spring-cloud-starter-config:3.0.4'
+
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bootstrap
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.3'
+
+
+    // spring boot actuator
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.5.4'
+
+    // spring boot amqp
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp:3.0.3'
+
+
 
 }
 
