--- a/SpringCloudMicroService/user-service/src/main/resources/application.yml
+++ b/SpringCloudMicroService/user-service/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: user-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   h2:
     console:
       enabled: true
@@ -32,7 +37,16 @@ logging:
   level:
     com.example.userservice: debug
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - refresh
+        - health
+        - beans
+        - busrefresh
 
-token:
-  expiration_time: 86400000 # 하루 ms 단위
-  secret: user-token
+#token:
+#  expiration_time: 86400000 # 하루 ms 단위
+#  secret: user-token
