fegin client finish

--- a/SpringCloudMicroService/user-service/build.gradle
+++ b/SpringCloudMicroService/user-service/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp
     implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp:3.0.3'
 
+    // Feign Client
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.3'
 
 
 }
