--- a/SpringCloudMicroService/user-service/src/main/resources/application.yml
+++ b/SpringCloudMicroService/user-service/src/main/resources/application.yml
@@ -36,7 +36,7 @@ greeting:
 
 logging:
   level:
-    com.example.userservice: debug
+    com.example.userservice.client: debug
 
 management:
   endpoints:
