--- a/SpringCloudMicroService/order-service/src/main/resources/application.yml
+++ b/SpringCloudMicroService/order-service/src/main/resources/application.yml
@@ -12,16 +12,18 @@ spring:
       path: /h2-console
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     generate-ddl: true
     database: mysql
 
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb
-#    username: root
-#    password: 1234
+    url: jdbc:mariadb://localhost:3307/mydb
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: 1234
+#    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:mem:testdb
 
 eureka:
   instance:
