--- a/SpringCloudMicroService/config-service/src/main/resources/bootstrap.yml
+++ b/SpringCloudMicroService/config-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 encrypt:
 #  key: abcdefghijklmnopqrstuvwxyz0123456789
   key-store:
-    location: file:///${user.home}/DeskTop/SpringCloud/keystore/apiEncryptionKey.jks
+    location: file://${user.home}/Desktop/SpringCloud/keystore/apiEncryptionKey.jks
     password: yoon1234
     alias: apiEncryptionKey
