--- a/kafka/kafka_connect/confluent-6.1.0/etc/kafka/connect-distributed.properties
+++ b/kafka/kafka_connect/confluent-6.1.0/etc/kafka/connect-distributed.properties
@@ -84,4 +84,4 @@ offset.flush.interval.ms=10000
 # Examples: 
 # plugin.path=/usr/local/share/java,/usr/local/share/kafka/plugins,/opt/connectors,
 # plugin.path=/usr/share/java
-plugin.path=\C:\\Users\\Yoon\\Desktop\\kafka\\confluentinc-kafka-connect-jdbc-10.2.2\\lib
+plugin.path=/Users/taeyoon/Desktop/SpringCloud/kafka/confluentinc-kafka-connect-jdbc-10.2.2/lib
