--- a/SpringCloudMicroService/order-service/src/main/resources/application.yml
+++ b/SpringCloudMicroService/order-service/src/main/resources/application.yml
@@ -18,12 +18,13 @@ spring:
     database: mysql
 
   datasource:
-    url: jdbc:mariadb://127.0.0.1:3306/mydb
-    driver-class-name: org.mariadb.jdbc.Driver
-    username: root
-    password: 1234
-#    driver-class-name: org.h2.Driver
-#    url: jdbc:h2:mem:testdb
+#    url: jdbc:mariadb://127.0.0.1:3306/mydb
+#    driver-class-name: org.mariadb.jdbc.Driver
+#    username: root
+#    password: 1234
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
 
 eureka:
   instance:
