--- a/SpringCloudMicroService/user-service/build.gradle
+++ b/SpringCloudMicroService/user-service/build.gradle
@@ -65,6 +65,10 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.3'
 
+    // Resilience4j
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-circuitbreaker-resilience4j
+    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j:2.0.2'
+
 
 }
 
