--- a/SpringCloudMicroService/order-service/src/main/resources/application.yml
+++ b/SpringCloudMicroService/order-service/src/main/resources/application.yml
@@ -4,6 +4,12 @@ server:
 spring:
   application:
     name: order-service
+  zipkin:
+    base-url: http://127.0.0.1:9411
+    enabled: true
+  sleuth:
+    sampler:
+      probability: 1.0
   h2:
     console:
       enabled: true
@@ -13,15 +19,15 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+#    show-sql: true
     generate-ddl: true
     database: mysql
 
   datasource:
-#    url: jdbc:mariadb://127.0.0.1:3306/mydb
-#    driver-class-name: org.mariadb.jdbc.Driver
-#    username: root
-#    password: 1234
+    #    url: jdbc:mariadb://127.0.0.1:3306/mydb
+    #    driver-class-name: org.mariadb.jdbc.Driver
+    #    username: root
+    #    password: 1234
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb
     username: sa
