--- a/SpringCloudMicroService/user-service/build.gradle
+++ b/SpringCloudMicroService/user-service/build.gradle
@@ -69,6 +69,13 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-circuitbreaker-resilience4j
     implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j:2.0.2'
 
+    // Spring Cloud Sleuth
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-sleuth
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.0.3'
+
+    // Spring Cloud Zipkin
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-sleuth-zipkin
+    implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.0.3'
 
 }
 
